--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 @import "reset";
+@import "products";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
@@ -15,7 +16,6 @@ html,body{
 /* ヘッダー */
 .header{
   display: block;
-  background-color: antiquewhite;
   padding: 0 60px;
   &__inner{
     max-width: 1040px;
@@ -32,10 +32,50 @@ html,body{
         padding-bottom: 10px;
         margin-right: 30px;
         border-radius: 4px;
+        a{
+          width: 140px;
+          display: block;
+          img{
+            width: 100%;
+            vertical-align: bottom;
+          }
+        }
       }
-      .search-box{
-        //margin-left: auto;
-        // width: 100%;
+    
+      .search__box{
+        margin-left: auto;
+        width: 100%;
+        &__input{
+          width: calc(100% - 26px);
+          height: 36px;
+          padding: 0 0 0 5px;
+        }
+        form {
+          width: 100%;
+          display: flex;
+          margin-bottom: 5px;
+          input{
+            width: calc(100%);
+            height: 36px;
+            padding: 0 0 0 5px;
+          }
+        }
+        button{
+          width: 36px;
+          border: 0;
+          cursor: pointer;
+          background-color: #3CCACE;
+          padding: 8px;
+          img{
+            width: 100%;
+            vertical-align: bottom;
+          }
+          input{
+            width: calc(100% - 26px);
+            height: 36px;
+            padding: 0 0 0 5px;
+          }
+        }
       }
     }
     .nav{
@@ -45,36 +85,45 @@ html,body{
       &__lists-left{
         position: relative;
         display:flex;
+      &__lists--first{
+        padding: 0;
+      } 
+      a{
+        color: black;
+        text-decoration: none;
+        line-height:32px;
+        background-position:center right;
+        background-repeat:no-repeat;
+        background-size:18px;
+        padding-right: 30px;
+        }
       }
+       
       &__lists-right{
         margin-left: auto;
         display: flex;
-        &__item{
-          line-height: 38px;
-          padding: 0 0 0 16px;
+        .lists-right__item{
+          padding: 0 0 0 16px
+        }
+        
+        a{
+          display: flex;
+          align-items: center;
+          color: #333;
+          text-decoration: none;
+          line-height: 32px;
         }
       }
-    a{
-      color: black;
-      text-decoration: none;
-      line-height:32px;
-      background-position:center right;
-      background-repeat:no-repeat;
-      background-size:18px;
-      padding-right: 25px;
     }
-    }
-    
   }
 }
 
 /*app__banner*/
 .app__banner{
   padding:100px 40px;
-  position:relative;
   background-size:cover;
   background-position: center;
-  background-color: darkgray;
+  background-image: url("pict/bg-appBanner-pict.jpg") ;
   .inner{
     color:#fff;
     text-align: center;
@@ -91,6 +140,14 @@ html,body{
       display: flex;
       justify-content: center;
       margin: 20px auto 0;
+      &__bbtn{
+        padding-top: 3px;
+      }
+      img{
+        width: 180px;
+        vertical-align: bottom;
+      }
+      
     }
   }
 }
@@ -118,10 +175,18 @@ html,body{
         margin: 0 0 20px;
         font-weight:bold;
       }
-  
+    }
   }
-  }
-  p{
-    font-size: 14px;
+  .footer__logo{
+    max-width: 160px;
+    width: 100%;
+    margin: 0 auto;
+    img{
+      width: 100%;
+      vertical-align: bottom;
+    }
+    p{
+      font-size: 14px;
+    }
   }
 }
