トップページ作成

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,70 +7,6 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': true
     = csrf_meta_tags
   %body
-    %header.header
-      .header__inner
-        .main-header
-          %h1.icon
-            =link_to "#" do
-              = image_tag "logo/logo.png"
-          .search__box
-            = form_for "#" do |f|
-              .search__box__input
-                = f.text_field :text, placeholder: "キーワードから探す" 
-              = f.button :image, class: '.search-box__icon' do
-                = image_tag ("icon/icon-search 1.png")
-        .nav
-          %ul.nav__lists-left
-            %li.list-lefts__item.lists-left__item--first
-              = link_to "カテゴリー", id="cat-btn"
-              = link_to "ブランド", id="brand-btn"
-          %ul.nav__lists-right
-            %li.lists-right__item.lists-right__item--login
-              = link_to "ログイン"
-            %li.lists-right__item.lists-right__item--new
-              = link_to "新規会員登録"
+    = render 'layouts/header'
     = yield
-    .app__banner
-      .inner
-        %h2.inner__title
-          だれでもかんたん、人生を変えるフリマアプリ
-        %p.inner__text
-          今すぐ無料ダウンロード！
-          .inner__icon
-            =link_to "#" do
-              = image_tag "icon/app-store-icon (1).png",class: "inner__icon__abtn"
-            =link_to "#" do
-              = image_tag "icon/unnamed.png" , class: "inner__icon__bbtn"
-    .footer
-      %ul.contents
-        %li.content
-          %h2.content__head FURIMAについて
-          %ul
-            %li
-              = link_to "会社概要(運営会社)"
-            %li
-              = link_to "プライバシーポリシー"
-            %li
-              = link_to "FURIMA利用規約"
-            %li
-              = link_to "ポイントに関する特約"
-        %li.content
-          %h2.content__head FURIMAを見る
-          %ul
-            %li
-              = link_to "カテゴリー一覧"
-            %li
-              = link_to "ブランド一覧"
-        %li.content
-          %h2.content__head ヘルプ＆ガイド
-          %ul
-            %li
-              = link_to "FURIMAガイド"
-            %li
-              = link_to "FURIMAロゴ利用ガイドライン"
-            %li
-              = link_to "お知らせ"
-      .footer__logo
-        =link_to "#" do
-          = image_tag "logo/logo-white.png"
-      %p © FURIMA
+    = render 'layouts/footer'
