--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -197,7 +197,8 @@
                     %before
                       0
                 %p (税込)
-%a(href="#")
+
+=link_to "#" do
   .purchaseBtn
     .purchaseBtn__text
       出品する
