ユーザー新規登録ログインサーバーサイド実装

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -2,7 +2,7 @@
   .header__inner
     .main-header
       %h1.icon
-        =link_to "#" do
+        =link_to root_path do
           = image_tag "logo/logo.png"
       .search__box
         = form_for "#" do |f|
@@ -16,7 +16,11 @@
           = link_to "カテゴリー", id="cat-btn"
           = link_to "ブランド", id="brand-btn"
       %ul.nav__lists-right
-        %li.lists-right__item.lists-right__item--login
-          = link_to "ログイン"
-        %li.lists-right__item.lists-right__item--new
-          = link_to "新規会員登録"
+        - if current_user && user_signed_in?
+          %li.lists-right__item.lists-right__item--logout
+            = link_to "ログアウト", logout_path
+        - else  
+          %li.lists-right__item.lists-right__item--login
+            = link_to "ログイン", login_path
+          %li.lists-right__item.lists-right__item--new
+            = link_to "新規会員登録", new_user_registration_path
