--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "products";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import "users";
 
 * {
   box-sizing: border-box;
@@ -11,6 +12,7 @@ html,body{
   height: 100%;
   margin: 0;
   padding: 0;
+  background-color: #f5f5f5;
 }
 
 /* ヘッダー */
