--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,3 +1,4 @@
+= render 'layouts/header'
 .main
   %session.main-visual
     .main-visual__content
@@ -204,3 +205,4 @@
       出品する
     .purchaseBtn__icon
       %i.fas.fa-camera
+= render 'layouts/footer'
