submitをaタグに修正

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -204,6 +204,7 @@
           height: 60px;
           font-size: 14px;
           .new-user-btn {
+            text-decoration: none;
             display: block;
             width: 100%;
             line-height: 48px;
