--- a/app/views/users/_loginpage.html.haml
+++ b/app/views/users/_loginpage.html.haml
@@ -22,5 +22,5 @@
           = f.submit "ログイン", class: "next-btn"
         .new-user-actions
           アカウントをお持ちでない方はこちらから
-          = f.submit "新規会員登録", class: "new-user-btn"
+          %a{ href: "#", class:'new-user-btn' } 新規登録
 //= render "users/shared/links"
