--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -1,39 +1,62 @@
-%h2 会員情報入力
-= form_with model: @user, url: user_registration_path, local: true do |f|
+.header-contener
+  =link_to root_path do
+    = image_tag "logo/logo.png"
+  .Group
+    .Group-Bar
+    .Group-Item.isActive
+      %p.Group-Item-Text 会員情報
+      .Group-Item-CircleInner.Circle.Shapeborder.isActive
+    .Group-Item
+      %p.Group-Item-Text 住所入力
+      .Group-Item-CircleInner.Circle.Shapeborder
+    .Group-Item
+      %p.Group-Item-Text 完了
+      .Group-Item-CircleInner.Circle.Shapeborder
+= form_with model: @user, url: user_registration_path, class: "form-body", local: true do |f|
   = render "devise/shared/error_messages", resource: @user
-  .field
-    = f.label "ニックネーム"
-    %br/
-    = f.text_field :nickname, autofocus: true, autocomplete: "name"
-  .field
-    = f.label "メールアドレス"
-    %br/
-    = f.email_field :email, autofocus: true, autocomplete: "email"
-  .field
-    = f.label "パスワード"
-    - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} 文字以上で入力)
-    %br/
-    = f.password_field :password, autocomplete: "new-password"
-  .field
-    = f.label "パスワード(確認用)"
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "new-password"
-  .field
-    = f.label "お名前（全角）"
-    %br/
-    = f.text_field :last_name, autofocus: true, autocomplete: "name"
-    = f.text_field :name, autofocus: true, autocomplete: "name"
-  .field
-    = f.label "お名前かな（全角）"
-    %br/
-    = f.text_field :last_name_rubi, autofocus: true, autocomplete: "name"
-    = f.text_field :name_rubi, autofocus: true, autocomplete: "name"
-  .field
-    = f.label "生年月日"
-    %br/
-    != sprintf(f.date_select(:birth_date, prefix: :birth_date, use_month_numbers: true, start_year: 1930, end_year: (Time.now.year - 10), default: Date.new(1989, 1, 1), date_separator:'%s'),'年','月')+'日'
-  .actions
-    = f.submit "次へ"
-= render "users/shared/links"
+  .field-contener
+    .registration 会員情報入力
+    .registration-form
+      .form-box
+        .form-group
+          = f.label "ニックネーム"
+          .Required-box 必須
+          %br/
+          = f.text_field :nickname, autofocus: true, autocomplete: "name", class: "text-field", placeholder: "例)フリマ太郎"
+        .form-group
+          = f.label "メールアドレス"
+          .Required-box 必須
+          %br/
+          = f.email_field :email, autofocus: true, autocomplete: "email", class: "text-field", placeholder: "PC・携帯どちらでも可"
+        .form-group
+          = f.label "パスワード"
+          .Required-box 必須
+          - if @minimum_password_length
+            %em
+              (#{@minimum_password_length} characters minimum)
+          %br/
+          = f.password_field :password, autocomplete: "new-password", class: "text-field", placeholder: "7文字以上の半角英数字"
+        .form-group
+          = f.label "確認用パスワード"
+          .Required-box 必須
+          %br/
+          = f.password_field :password_confirmation, autocomplete: "new-password", class: "text-field", placeholder: "確認のためもう一度入力してください"
+        .form-group
+          = f.label "お名前（全角）"
+          .Required-box 必須
+          %br/
+          = f.text_field :last_name, autofocus: true, autocomplete: "name", class: "text-field-left", placeholder: "例)山田"
+          = f.text_field :name, autofocus: true, autocomplete: "name", class: "text-field-right", placeholder: "例)彩"
+        .form-group
+          = f.label "お名前カナ（全角）"
+          .Required-box 必須
+          %br/
+          = f.text_field :last_name_rubi, autofocus: true, autocomplete: "name", class: "text-field-left", placeholder: "例)ヤマダ"
+          = f.text_field :name_rubi, autofocus: true, autocomplete: "name", class: "text-field-right", placeholder: "例)アヤ"
+        .form-group
+          = f.label "生年月日"
+          .Required-box 必須
+          %br/
+          != sprintf(f.date_select(:birth_date, prefix: :birth_date, use_month_numbers: true, start_year: 1930, end_year: (Time.now.year - 10), default: Date.new(1989, 1, 1), date_separator:'%s'),'年','月')+'日'
+        .actions
+          = f.submit "次へ進む", class: "next-btn"
