商品出品ページ

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "reset";
 @import "products";
+@import "products_new";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "users";
