--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -198,8 +198,7 @@
                     %before
                       0
                 %p (税込)
-
-=link_to "/products/new" do
+= new_product_path do
   .purchaseBtn
     .purchaseBtn__text
       出品する
