--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -199,7 +199,7 @@
                       0
                 %p (税込)
 
-=link_to "#" do
+=link_to new_product_path do
   .purchaseBtn
     .purchaseBtn__text
       出品する
