--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -198,7 +198,7 @@
                     %before
                       0
                 %p (税込)
-= new_product_path do
+= link_to new_product_path do
   .purchaseBtn
     .purchaseBtn__text
       出品する
