本番環境に合わせた画像の修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -126,7 +126,7 @@ html,body{
   padding:100px 40px;
   background-size:cover;
   background-position: center;
-  background-image: url("pict/bg-appBanner-pict.jpg") ;
+  background-image: image-url("pict/bg-appBanner-pict.jpg") ;
   .inner{
     color:#fff;
     text-align: center;
