--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -6,7 +6,7 @@
   .main-visual{
     width: 100%;
     height: 560px;
-    background-image: url(pict/bg-mainVisual-pict_pc.jpg);
+    background-image: image-url("pict/bg-mainVisual-pict_pc.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top center;
@@ -113,7 +113,7 @@
      }
   }
   .topMiddleDl{
-    background-image: url(pict/bg-topMiddleDl-pict.jpg);
+    background-image: image-url("pict/bg-topMiddleDl-pict.jpg");
     background-position: bottom right;
     height: 400px;
     background-size: cover;
