--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -98,7 +98,7 @@
         .product-list
           %a
             .product-list__img
-              =image_tag  "/assets/sakana.png"
+              =image_tag  "post_date/sakana.png"
             .productList--body
               .productList--body__name
                 product3
@@ -114,7 +114,7 @@
         .product-list
           %a
             .product-list__img
-              =image_tag "/assets/oniku.png"
+              =image_tag "post_date/oniku.png"
             .productList--body
               .productList--body__name
                 product2
@@ -130,7 +130,7 @@
         .product-list
           %a
             .product-list__img
-              =image_tag "/assets/care-.png"
+              =image_tag "post_date/care-.png"
             .productList--body
               .productList--body__name
                 product1
@@ -153,7 +153,7 @@
         .product-list
           %a
             .product-list__img
-              =image_tag "/assets/sakana.png"
+              =image_tag "post_date/sakana.png"
             .productList--body
               .productList--body__name
                 product3
@@ -169,7 +169,7 @@
         .product-list
           %a
             .product-list__img
-              =image_tag "/assets/oniku.png"
+              =image_tag "post_date/oniku.png"
             .productList--body
               .productList--body__name
                 product2
@@ -185,7 +185,7 @@
         .product-list
           %a
             .product-list__img
-              =image_tag "/assets/care-.png"
+              =image_tag "post_date/care-.png"
             .productList--body
               .productList--body__name
                 product1
