本番環境に伴う、商品詳細ページの画像修正

--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -34,15 +34,15 @@
           .item-box__body
             %ul
               %li
-                =image_tag "/assets/oniku.png"
+                =image_tag "post_date/oniku.png"
             .img__plural
               %ul
                 %li
-                  =image_tag "/assets/oniku.png"
+                  =image_tag "post_date/oniku.png"
                 %li
-                  =image_tag "/assets/care-.png"
+                  =image_tag "post_date/care-.png"
                 %li
-                  =image_tag "/assets/sakana.png"
+                  =image_tag "post_date/sakana.png"
           .item-box__price
             %span
               ¥30000
