スタイルscssのカラー表記方法の統一のための修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -160,7 +160,7 @@ html,body{
   padding: 60px 0;
   color:#fff;
   text-align: center;
-  background-color: black;
+  background-color: #000000;
   .contents{
     display: flex;
     margin: 0 auto;
