--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -15,13 +15,13 @@
     display: flex;
     align-items: center;
     .main-visual__content--subtitle{
-      text-shadow: 0 0 5px rgba(0,0,0,0.4);
+      text-shadow: 0 0 5px #00000066;
       font-size: 60px;
       line-height: 1.2;
       color: #fff;
     }
     .main-visual__content--text{
-      text-shadow: 0 0 5px rgba(0,0,0,0.4);
+      text-shadow: 0 0 5px #00000066;
       font-size: 18px;
       color: #fff;
       line-height: 1.77778;
@@ -121,7 +121,7 @@
     align-items: center;
     .topMiddleDl__inner{
       color: #fff;
-      text-shadow: 0 0 5px rgba(0,0,0,0.4);
+      text-shadow: 0 0 5px #00000066;
       text-align: left;
       max-width: 1040px;
       width: 100%;
@@ -264,7 +264,7 @@
               }
             }
             .productList--body{
-              background-color: white;
+              background-color: #ffffff;
               color: #333;
               padding: 16px;
               font-weight: none;
@@ -299,7 +299,7 @@
               }
             }
           }
-       }
+        }
       }
     }
 }
@@ -624,7 +624,7 @@ a{
     .fa-camera:before {
       width: 130%;
       font-size: 55px;
-      color: white;
+      color: #ffffff;
    }
   }
   .purchaseBtn:hover {
