--- a/app/assets/stylesheets/products_new.scss
+++ b/app/assets/stylesheets/products_new.scss
@@ -1,8 +1,8 @@
 .product{
   position: relative;
   min-height: 100%;
-  color: rgb(51, 51, 51);
-  background-color: rgb(245, 245, 245);
+  color: #333333;
+  background-color: #f5f5f5;
   font-family: Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
   font-size: 14px;
   display: block;
@@ -24,7 +24,7 @@
     display: flex;
     -webkit-box-pack: center;
     justify-content: center;
-    background-color:rgb(245, 245, 245);;
+    background-color:#f5f5f5;
     .head_icon{
       color: inherit;
       text-decoration: none;
@@ -35,7 +35,7 @@
     }
   }
   .product_out{
-    background-color: rgb(245, 245, 245);
+    background-color: #f5f5f5;
     width: 100%;
     .product_wide{
       height: 100%;
@@ -44,20 +44,20 @@
       display: flex;
       -webkit-box-pack: center;
       justify-content: center;
-      background-color: rgb(245, 245, 245);
+      background-color: #f5f5f5;
       .product_box__img{
         width: 700px;
         padding-top: 40px;
-        background-color: rgb(255, 255, 255);
+        background-color: #ffffff;
         border-bottom: solid;
         border-width: thin;
-        border-bottom-color:  rgb(245, 245, 245);
+        border-bottom-color:  #f5f5f5;
         .product_box__img__exhibition{
           padding-left: 40px;
           .required{
             font-size: 12px;
-            background-color: red;
-            color: white;
+            background-color: #ff0000;
+            color: #ffffff;
             margin-left: 8px;
             padding: 0 4px;
             flex: auto;
@@ -80,7 +80,7 @@
           .product_box__img__boxzise{
             width: 620px;
             height: 150px;
-            background-color:  rgb(245, 245, 245);
+            background-color:  #f5f5f5;
             position: relative;
             border-width: 1px;
             border-style: dashed;
@@ -115,7 +115,7 @@
 
 
   .product_name{
-    background-color: rgb(245, 245, 245);
+    background-color: #f5f5f5;
     width: 100%;
     .product_name__wide{
       height: 100%;
@@ -124,20 +124,20 @@
       display: flex;
       -webkit-box-pack: center;
       justify-content: center;
-      background-color: rgb(245, 245, 245);
+      background-color: #f5f5f5;
       .product_name_box__img{
         width: 700px;
         padding-top: 40px;
-        background-color: rgb(255, 255, 255);
+        background-color: #ffffff;
         border-bottom: solid;
         border-width: thin;
-        border-bottom-color: rgb(245, 245, 245);;
+        border-bottom-color: #f5f5f5;;
         .product_name_box__exhibition{
           padding-left: 40px;
           .required{
             font-size: 12px;
-            background-color: red;
-            color: white;
+            background-color: #ff0000;
+            color: #ffffff;
             margin-left: 8px;
             padding: 0 4px;
             flex: auto;
@@ -178,8 +178,8 @@
           padding-left: 40px;
           .required{
             font-size: 12px;
-            background-color: red;
-            color: white;
+            background-color: #ff0000;
+            color: #ffffff;
             margin-left: 8px;
             padding: 0 4px;
             flex: auto;
@@ -233,7 +233,7 @@
   }
 
   .details{
-    background-color:  rgb(245, 245, 245);
+    background-color:  #f5f5f5;
     width: 100%;
     .details__wide{
       height: 100%;
@@ -242,17 +242,16 @@
       display: flex;
       -webkit-box-pack: center;
       justify-content: center;
-      background-color: rgb(245, 245, 245);
       .details_name__title{
         padding-left: 40px;
       }
       .details_name{
         width: 700px;
         padding-top: 40px;
-        background-color: rgb(255, 255, 255);
+        background-color: #ffffff;
         border-bottom: solid;
         border-width: thin;
-        border-bottom-color: rgb(245, 245, 245);
+        border-bottom-color: #f5f5f5;
           .details_name__title{
             margin-top: 1px;
             color: #888;
@@ -262,8 +261,8 @@
             padding-top: 25px;
             .required{
               font-size: 12px;
-              background-color: red;
-              color: white;
+              background-color: #ff0000;
+              color: #ffffff;
               margin-left: 8px;
               padding: 0 4px;
               flex: auto;
@@ -274,7 +273,7 @@
               line-height: 1.4em;
             }
           }
-        }
+      }
       .categories{
         padding-left: 40px;
         align-items: center;
@@ -383,13 +382,12 @@
         margin: 4px 0 0;
         padding-bottom: 25px;
       }
-      }
       .brand{
         padding-left: 40px;
         .any{
           font-size: 12px;
-          background-color:gray;
-          color: white;
+          background-color:#808080;
+          color: #ffffff;
           margin-left: 8px;
           padding: 0 4px;
           flex: auto;
@@ -422,13 +420,13 @@
         }
       }
       .state{
-        color: black;
+        color: #000000;
         padding-top: 25px;
         padding-left: 40px;
         .required{
           font-size: 12px;
-          background-color: red;
-          color: white;
+          background-color: #ff0000;
+          color: #ffffff;
           margin-left: 8px;
           padding: 0 4px;
           flex: auto;
@@ -486,7 +484,7 @@
     }
   }
   .delivery{
-    background-color: rgb(245, 245, 245);
+    background-color: #f5f5f5;
     width: 100%;
     .delivery__wide{
       height: 100%;
@@ -495,17 +493,17 @@
       display: flex;
       -webkit-box-pack: center;
       justify-content: center;
-      background-color:  rgb(245, 245, 245);
+      background-color:  #f5f5f5;
       .delivery_name{
         .delivery_name__title{
           width: 700px;
           color: #ccc;
           padding-top: 40px;
           padding-left: 40px;
-          background-color:rgb(255, 255, 255);
+          background-color:#ffffff;
           border-bottom: solid;
           border-width: thin;
-          border-bottom-color: rgb(245, 245, 245);
+          border-bottom-color: #f5f5f5;
           .help{
             display: inline;
             margin-left: 15px;
@@ -513,12 +511,12 @@
         }
       }
           .delivery_name__exhibition{
-            color: black;
+            color: #000000;
             padding-top: 15px;
             .required{
               font-size: 12px;
-              background-color: red;
-              color: white;
+              background-color: #ff0000;
+              color: #ffffff;
               margin-left: 8px;
               padding: 0 4px;
               flex: auto;
@@ -584,12 +582,12 @@
       }
     }
       .delivery_area__exhibition{
-        color: black;
+        color: #000000;
         padding-top: 25px;
         .required{
           font-size: 12px;
-          background-color: red;
-          color: white;
+          background-color: #ff0000;
+          color: #ffffff;
           margin-left: 8px;
           padding: 0 4px;
           flex: auto;
@@ -644,7 +642,7 @@
     }
   }
   .value{
-    background-color: rgb(245, 245, 245);
+    background-color: #f5f5f5;
     width: 100%;
     .value__wide{
       height: 100%;
@@ -653,18 +651,16 @@
       display: flex;
       -webkit-box-pack: center;
       justify-content: center;
-      background-color: rgb(245, 245, 245);
       .value__name{
         width: 700px;
         color: #ccc;
         padding-top: 40px;
         padding-left: 40px;
         padding-right: 40px;
-        background-color: rgb(255, 255, 255);
+        background-color: #ffffff;
         border-width: thin;
-        border-bottom-color: white;
-        background-color: rgb(255, 255, 255);
-        display: inline;
+        border-bottom-color: #ffffff;
+        display: inline-block;
         padding-bottom: 32px;
         .value_name__title{
           padding-top: 1px;
@@ -674,12 +670,12 @@
           }
         }
         .selling_price{
-          color: black;
+          color: #000000;
           padding-top: 25px;
           .required{
             font-size: 12px;
-            background-color: red;
-            color: white;
+            background-color: #ff0000;
+            color: #ffffff;
             margin-left: 8px;
             padding: 0 4px;
             flex: auto;
@@ -721,18 +717,18 @@
             padding-top: 15px;
             width: 100%;
             text-align: right;
-            color: red;
+            color: #ff0000;
           }
         }
         .commission{
           padding-top: 18px;
           padding-bottom: 15px;
-          color: black;
+          color: #000000;
           display: flex;
           border-bottom: solid;
           border-width: thin ;
           box-sizing: 50px;
-          border-bottom-color:  rgb(245, 245, 245);
+          border-bottom-color:  #f5f5f5;
           .commission__title{
             margin-right: auto;
             white-space: nowrap;
@@ -744,7 +740,7 @@
         .sale{
           padding-top: 18px;
           padding-bottom: 15px;
-          color: black;
+          color: #000000;
           display: flex;
           margin-bottom: 40px;
           .sale__title{
@@ -760,8 +756,8 @@
           width: 360px;
           margin: 0px auto 24px;
           button{
-            color: white;
-            background-color: red;
+            color: #ffffff;
+            background-color: #ff0000;
             border: 1px solid #ccc;
             border-radius: 4px;
             box-sizing: border-box;
@@ -779,8 +775,8 @@
           width: 360px;
           margin: 0px auto 24px;
           button{
-            color: black;
-            background-color: gray;
+            color: #000000;
+            background-color: #808080;
             border: 1px solid #ccc;
             border-radius: 4px;
             box-sizing: border-box;
@@ -801,7 +797,8 @@
         .prohibited{
           font-size: 12px;
           line-height: 1.4em;
-          color: black;
+          color: #000000;
+        }
       }
     }
   }
