マイページ作成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,9 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "users";
+@import "mypage";
+@import "logout";
+@import "credit";
 
 * {
   box-sizing: border-box;
