--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -174,7 +174,7 @@
         .delivery_name__title
           <b>配送について</b>
           .help
-            = link_to('#', {})
+            = link_to('利用規約', {})
           .delivery_name__exhibition
             <b>配送料の負担</b>
             .required
@@ -272,7 +272,7 @@
         .value_name__title
           <b>価格 (¥300~9,999,999)</b>
           .help
-            = link_to('#', {})
+            = link_to('利用規約', {})
         .selling_price
           <b>販売価格</b>
           .required
