--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -13,7 +13,6 @@
       %p.Group-Item-Text 完了
       .Group-Item-CircleInner.Circle.Shapeborder
 = form_with model: @user, url: user_registration_path, class: "form-body", local: true do |f|
-  = render "devise/shared/error_messages", resource: @user
   .field-contener
     .registration 会員情報入力
     .registration-form
@@ -23,19 +22,25 @@
           .Required-box 必須
           %br/
           = f.text_field :nickname, autofocus: true, autocomplete: "name", class: "text-field", placeholder: "例)フリマ太郎"
+          .error_message
+            = @user.errors.full_messages_for(:nickname)[0]
         .form-group
           = f.label "メールアドレス"
           .Required-box 必須
           %br/
           = f.email_field :email, autofocus: true, autocomplete: "email", class: "text-field", placeholder: "PC・携帯どちらでも可"
+          .error_message
+            = @user.errors.full_messages_for(:email)[0]
         .form-group
           = f.label "パスワード"
           .Required-box 必須
           - if @minimum_password_length
             %em
-              (#{@minimum_password_length} characters minimum)
+              (#{@minimum_password_length} 文字以上)
           %br/
           = f.password_field :password, autocomplete: "new-password", class: "text-field", placeholder: "7文字以上の半角英数字"
+          .error_message
+            = @user.errors.full_messages_for(:password)[0]
         .form-group
           = f.label "確認用パスワード"
           .Required-box 必須
@@ -46,17 +51,27 @@
           .Required-box 必須
           %br/
           = f.text_field :last_name, autofocus: true, autocomplete: "name", class: "text-field-left", placeholder: "例)山田"
+          .error_message
+            = @user.errors.full_messages_for(:last_name)[0]
           = f.text_field :name, autofocus: true, autocomplete: "name", class: "text-field-right", placeholder: "例)彩"
+          .error_message
+            = @user.errors.full_messages_for(:name)[0]
         .form-group
-          = f.label "お名前カナ（全角）"
+          = f.label "お名前かな（全角）"
           .Required-box 必須
           %br/
-          = f.text_field :last_name_rubi, autofocus: true, autocomplete: "name", class: "text-field-left", placeholder: "例)ヤマダ"
-          = f.text_field :name_rubi, autofocus: true, autocomplete: "name", class: "text-field-right", placeholder: "例)アヤ"
+          = f.text_field :last_name_rubi, autofocus: true, autocomplete: "name", class: "text-field-left", placeholder: "例)やまだ"
+          .error_message
+            = @user.errors.full_messages_for(:last_name_rubi)[0]
+          = f.text_field :name_rubi, autofocus: true, autocomplete: "name", class: "text-field-right", placeholder: "例)あや"
+          .error_message
+            = @user.errors.full_messages_for(:name_rubi)[0]
         .form-group
           = f.label "生年月日"
           .Required-box 必須
           %br/
-          != sprintf(f.date_select(:birth_date, prefix: :birth_date, use_month_numbers: true, start_year: 1930, end_year: (Time.now.year - 10), default: Date.new(1989, 1, 1), date_separator:'%s'),'年','月')+'日'
+          != sprintf(f.date_select(:birth_date, prefix: :birth_date, include_blank: true, use_month_numbers: true, start_year: 1930, end_year: (Time.now.year - 10), default: Date.new(1989, 1, 1), date_separator:'%s'),'年','月','日')
+          .error_message
+            = @user.errors.full_messages_for(:birth_date)[0]
         .actions
           = f.submit "次へ進む", class: "next-btn"
