--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -232,13 +232,14 @@
         color: #3CCACE;
       }
       .product-lists{
-        width: 780px;
+        width: 950px;
         margin: 26px auto;
         display: flex;
         justify-content: space-around;
-        
+        flex-wrap: wrap;
         .product-list{
           display: inline-block;
+          margin-bottom: 15px;
           a{
             text-decoration: none;
             background-color: #fff;
