--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -95,14 +95,17 @@
       .product-head
         新規投稿商品
       .product-lists
-        - @Products.each do |product|
+        - @products.each do |product|
           .product-list
             = link_to "/products/show" do
               .product-list__img
-                =image_tag "post_date/sakana.png"
+                =image_tag "#{product.images[0].image}"
+                -if product.purchase_status != "出品中­"
+                  .purchase_status__sold
+                    =image_tag "icon/sold-stamp-3.png"
               .productList--body
                 .productList--body__name
-                  =product.name
+                  = product.name
                 .productList--body__details
                   %ul
                     %li 
@@ -111,7 +114,9 @@
                       %i.fa.fa-star.icon
                       %before
                         0
-                  %p (税込)
+                  %p 
+                    (税込)
+              
 
   .pickup-container
     %head 
@@ -120,14 +125,17 @@
       .product-head
         アーカイバ
       .product-lists
-        - @Products.each do |product|
+        - @products.each do |product|
           .product-list
             = link_to "/products/show" do
               .product-list__img
-                =image_tag "post_date/sakana.png"
+                =image_tag "#{product.images[0].image}"
+                -if product.purchase_status != "出品中­"
+                  .purchase_status__sold
+                    =image_tag "icon/sold-stamp-3.png"
               .productList--body
                 .productList--body__name
-                  =product.name
+                  = product.name
                 .productList--body__details
                   %ul
                     %li 
@@ -136,8 +144,8 @@
                       %i.fa.fa-star.icon
                       %before
                         0
-                  %p (税込)
-        
+                  %p 
+                    (税込)
 = link_to new_product_path do
   .purchaseBtn
     .purchaseBtn__text
