--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -96,7 +96,7 @@
         新規投稿商品
       .product-lists
         .product-list
-          = link_to "/products/show" do
+          = link_to "products/1" do
             .product-list__img
               =image_tag  "post_date/sakana.png"
             .productList--body
