--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -112,14 +112,17 @@
                   不適切な商品の通報
           - if current_user && user_signed_in? && current_user.id != @product.seller_id 
             .buy-btn-contener
-              %button.buy-btn{type: "submit"}
-                購入する
+              = link_to "#",class:"no-underline" do
+                %button.buy-btn{type: "submit"}
+                  購入する
           - elsif current_user && user_signed_in?
             .buy-btn-contener
-              %button.delete-btn{type: "submit"}
-                削除する
-              %button.edit-btn{type: "submit"}
-                編集する
+              = link_to "#",class:"no-underline" do
+                %button.delete-btn{type: "submit"}
+                  削除する
+              = link_to "#",class:"no-underline" do
+                %button.edit-btn{type: "submit"}
+                  編集する
         .comment__box
           %ul.comment__contents
             %form
