--- a/app/assets/stylesheets/products_new.scss
+++ b/app/assets/stylesheets/products_new.scss
@@ -274,17 +274,41 @@
             }
           }
       }
-      .categories{
+      .form{
         padding-left: 40px;
         align-items: center;
         display: inline-flex;
-        width: 97%;
-        .categories_box{
+        .listing-product-detail__category{
           display: inline-block;
           position: relative;
-          width: inherit;
           padding-top: 15px;
-          width: 97%;
+          .listing-default__label{
+            font-size: 14px;
+            font-weight: 600;
+            margin-right: 5px;
+          }
+          .listing-default--require{
+            font-size: 12px;
+            background-color: #ff0000;
+            color: #ffffff;
+            margin-left: 8px;
+            padding: 0 4px;
+            flex: auto;
+            border-radius: 2px;
+            display: inline-block;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 1.4em;
+          }
+          .listing-select-wrapper{
+            font-size: 14px;
+            padding-top: 20px;
+            .listing-select-wrapper__box{
+              .listing-select-wrapper__box--select{
+                margin-top: 20px;
+              }
+            }
+          }
           select{
             -webkit-appearance: none;
             -moz-appearance: none;
@@ -294,39 +318,11 @@
             font-size: 16px;
             height: 48px;
             line-height: 1;
-            margin: 0;
+            margin-bottom: 40px;
             padding: 0 56px 0 16px;
-            width: 100%;
-            option{
-              font-weight: normal;
-              display: block;
-              white-space: pre;
-              min-height: 1.2em;
-              padding: 0px 2px 1px;
-            }
-          }
-          svg{
-            bottom: 0;
-            margin-top: 30px;
-            pointer-events: none;
-            position: absolute;
-            right: 16px;
-            top: 0;
-            path{
-              box-sizing: border-box;
-            }
+            width: 615px;
           }
         }
-      }
-      .style_formerror{
-        padding-left: 40px;
-        margin-top: 16px;
-        padding-top: 20px;
-        color: #ff0211;
-        font-size: 14px;
-        line-height: 1.4em;
-        margin: 4px 0 0;
-        padding-bottom: 25px;
       }
       .size{
         padding-left: 40px;
