--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -69,8 +69,7 @@
             %span.listing-default--require 必須
             .listing-select-wrapper
               .listing-select-wrapper__box
-                = f.select :category, @category_parent_array, {},  {class: 'listing-select-wrapper__box--select', id: 'parent_category' } 
-
+                = f.collection_select :category_id, Category.where(ancestry: nil),  :id, :name, prompt: "---"
         .state
           %b サイズ
           .required
