--- a/app/views/products/purchased.html.haml
+++ b/app/views/products/purchased.html.haml
@@ -6,4 +6,4 @@
     .registration 購入が完了しました
     .registration-form
       .top-link
-        = link_to("トップページに戻る", "#",class: "link-text")
+        = link_to("トップページに戻る", root_path, {class: "link-text"})
