--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,7 +7,8 @@
 @import "mypage";
 @import "logout";
 @import "credit";
-
+@import "card";
+@import "buy_products";
 * {
   box-sizing: border-box;
 }
