--- a/app/assets/stylesheets/buy_products.scss
+++ b/app/assets/stylesheets/buy_products.scss
@@ -1,16 +1,3 @@
-.header-contener {
-  background-color: #F5F5F5;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 40px 0 40px 0;
-  img {
-    width: 160px;
-    height: 40px;
-  }
-}
-
-
 .form-body {
   background-color: #F5F5F5;
   .field-contener{
@@ -36,32 +23,30 @@
     .buy-item-box{
       display: flex;
       .buy-item__image{
-        height: 80px;
-        width: 80px;
+        margin-right:10px;
+        height: 100px;
+        width: 100px;
         min-width: 80px;
         display: flex;
         justify-content: center;
         align-items: center;
         img {
-          width: 80px;
+          width: 100px;
         }
       }
-      .buy-item__detail{
-        margin-left: 16px;
-        .buy-item__name{
-          font-size: 14px;
-          margin: 0;
-          padding: 0 0 8px;
-          line-height: 1.5;
-          text-align: left;
-        }
-        .buy-price{
-          margin: 0;
-          text-align: left;
-          font-size: 15px;
-          .item__shipping-fee{
-            font-size: 12px;
-          }
+      .buy-item__name{
+        font-size: 15px;
+        margin: 0;
+        padding: 10px 15px 8px;
+        line-height: 1.5;
+        text-align: left;
+      }
+      .buy-price{
+        margin: 0;
+        text-align: left;
+        font-size: 15px;
+        .item__shipping-fee{
+          font-size: 12px;
         }
       }
     }
@@ -103,25 +88,21 @@
           text-align: right;
         }
       .bold{
-       font-weight: 600px;
-       margin: 24px 0 32px;
+        font-weight: 600px;
+        margin: 24px 0 32px;
       }
       }
     }
-    .buy-point{
-      color: #888;
-      margin: 24px 0 32px;
-      li{
-        display: list-item;
-        text-align: -webkit-match-parent;
-      }
-    }
+    
     .buy-content__inner{
       padding: 32px 0;
       border-top: 1px solid #f5f4f4;
       h3{
         margin: 0;
         font-size: 14px;
+      }
+      .residences__box{
+        margin-top: 10px;
       }
       a{
         color: #0099e8;
@@ -157,25 +138,4 @@
   }
 }
 
-.registration-form {
-  padding: 0 40px 60px;
-  margin-bottom: 80px;
-  .top-link {
-    margin: 30px auto;
-    max-width: 300px;
-    line-height: 48px;
-    font-size: 14px;
-    cursor: pointer;
-    text-align: center;
-    background-color: red;
-    .link-text {
-      color: white;
-      text-decoration: none;
-    }
-    .link-text:disabled {
-      border: 1px solid #888;
-      background: #888;
-      color: #fff;
-    }
-  }
-}
+
