商品購入機能(商品購入ページ、マイページ)

--- a/app/views/users/_mypage.html.haml
+++ b/app/views/users/_mypage.html.haml
@@ -94,7 +94,7 @@
                   %i.icon-arrow-right
                     ＞
               - else
-                = link_to card_show_path do
+                = link_to card_path do
                   支払い方法
                   %i.icon-arrow-right
                     ＞
