--- a/app/views/card/new.html.haml
+++ b/app/views/card/new.html.haml
@@ -21,19 +21,19 @@
                 = text_field_tag "number", "", class: "number", placeholder: "半角数字のみ" ,maxlength: "16", type: "text", id: "card_number"
               %ul.sigup__card-list
                 %li
-                  = image_tag "card/Visa_logo_detail.svg.png" 
+                  = image_tag "card/Visa.jpg" 
                 %li
-                  = image_tag "card/Mastercard-logo.svg.png"
+                  = image_tag "card/Master.jpg"
                 %li
-                  = image_tag "card/SAISON-CARD.jpg"
+                  = image_tag "card/Saison.jpg"
                 %li
-                  = image_tag "card/jcb_logo.jpg"
+                  = image_tag "card/Jcb.jpg"
                 %li
-                  = image_tag "card/American_Express.svg_.png"
+                  = image_tag "card/American_Express.jpg"
                 %li
-                  = image_tag "card/cw_13top.gif"
+                  = image_tag "card/Diner_club.jpg"
                 %li
-                  = image_tag "card/discovercard.jpg"
+                  = image_tag "card/Discover.jpg"
               .product_name_box__description
                 %b
                   有効期限
