出品機能の修正

--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -20,7 +20,6 @@
                 .hidden_destroy
                   = image.check_box :_destroy, {data: {index: image.index}}
               .picture_preview.not_saved_picture
-              
               %label.img_upload_container.default_uploader
                 - if product.persisted?
                   .js-file_group{ data: { index: image.index } }
@@ -69,7 +68,7 @@
             %span.listing-default--require 必須
             .listing-select-wrapper
               .listing-select-wrapper__box
-                = f.collection_select :category_id, Category.where(ancestry: nil),  :id, :name, prompt: "---"
+                = f.select :category, Category.where(ancestry: nil).pluck(:name).unshift('---'), {class: 'product-details__categories-input--select', id: 'parent_category'}
         .state
           %b サイズ
           .required
@@ -84,9 +83,9 @@
           .any
             %b 任意
         .brand_box
-          =  f.text_field :brand_name
+          =  f.text_field :bland_name
         .error_message
-          = product.errors.full_messages_for(:brand_name)[0]
+          = product.errors.full_messages_for(:bland_name)[0]
         .state
           %b 商品の状態
           .required
